@startuml BuildFlow_Class_Diagram
title BuildFlow - System Class Diagram (Object-Oriented Domain Model)
skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam shadowing false

abstract class BaseEntity <<entity>> {
  +String id
  +DateTime createdAt
  +DateTime updatedAt
}

note top of BaseEntity
  Architecture Note: Domain Model Entity Hierarchy
  All entities inherit from BaseEntity via Generalization.
  Contains Stereotypes <<entity>>, <<service>>, <<enumeration>>.
end note

enum UserRole <<enumeration>> {
  PROJECT_OWNER
  PROJECT_MANAGER
  ARCHITECT
  ENGINEER
  CONTRACTOR
  SITE_SUPERVISOR
  SUPPLIER
  INSPECTOR
}

enum TaskStatus <<enumeration>> {
  BACKLOG
  TODO
  IN_PROGRESS
  IN_REVIEW
  DONE
}

enum Priority <<enumeration>> {
  LOW
  MEDIUM
  HIGH
  URGENT
}

enum DesignStatus <<enumeration>> {
  DRAFT
  UNDER_REVIEW
  APPROVED
  REJECTED
}

enum MaterialStatus <<enumeration>> {
  REQUESTED
  ORDERED
  IN_TRANSIT
  DELIVERED
  DELAYED
}

enum InspectionResult <<enumeration>> {
  PASSED
  FAILED
  PENDING
}

enum IssueSeverity <<enumeration>> {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}

class User <<entity>> {
  +String name
  +String email
  +UserRole role
  +String title
  +String department
  +login() : Boolean
  +switchRole(UserRole newRole) : Void
}

class Project <<entity>> {
  +String code
  +String name
  +String location
  +Float budget
  +DateTime startDate
  +DateTime endDate
  +Int progress
  +createProject() : Project
  +calculateProgress() : Int
}

class Task <<entity>> {
  +String code
  +String title
  +String description
  +Priority priority
  +TaskStatus status
  +DateTime dueDate
  +updateStatus(TaskStatus status) : Void
  +assignTo(User assignee) : Void
}

class TaskDependency <<entity>> {
  +String taskId
  +String prerequisiteTaskId
}

class DesignDocument <<entity>> {
  +String code
  +String title
  +String category
  +String version
  +DesignStatus status
  +uploadBlueprint() : Void
  +submitForReview() : Void
}

class DesignReview <<entity>> {
  +String designId
  +String reviewerId
  +DesignStatus status
  +String calculationRemarks
  +certifyApproval(String remarks) : Void
}

class Material <<entity>> {
  +String code
  +String name
  +String category
  +String unit
  +Float unitCost
}

class MaterialRequest <<entity>> {
  +String code
  +Float quantity
  +MaterialStatus status
  +DateTime expectedDelivery
  +String notes
  +updateDeliveryStatus(MaterialStatus newStatus) : Void
}

class Inspection <<entity>> {
  +String code
  +String area
  +String checkCategory
  +InspectionResult result
  +String notes
  +DateTime inspectionDate
  +recordAudit() : Inspection
}

class Issue <<entity>> {
  +String code
  +String title
  +IssueSeverity severity
  +String status
  +String resolutionNotes
  +logIssue() : Issue
  +resolveIssue(String notes) : Void
}

class ActivityLog <<entity>> {
  +String userId
  +String action
  +String entityType
  +String details
}

interface IAuditService <<interface>> {
  +logActivity(String userId, String action, String details) : Void
}

class AuditLogger <<service>> {
  +logActivity(String userId, String action, String details) : Void
}

BaseEntity <|-- User
BaseEntity <|-- Project
BaseEntity <|-- Task
BaseEntity <|-- DesignDocument
BaseEntity <|-- Material
BaseEntity <|-- Inspection
BaseEntity <|-- Issue
BaseEntity <|-- ActivityLog

IAuditService <|.. AuditLogger

Project "1" *-- "0..*" Task : contains
Project "1" *-- "0..*" DesignDocument : contains
Project "1" *-- "0..*" Material : specifies
Project "1" *-- "0..*" Inspection : audits
Project "1" *-- "0..*" Issue : tracks
DesignDocument "1" *-- "0..*" DesignReview : reviews

Task "1" o-- "0..*" TaskDependency : prerequisite
Material "1" o-- "0..*" MaterialRequest : orderedVia

User "1" <-- "0..*" Project : managedBy
User "1" <-- "0..*" Task : assignedTo
User "1" <-- "0..*" DesignReview : reviewedBy
User "1" <-- "0..*" DesignDocument : uploadedBy
User "1" <-- "0..*" MaterialRequest : suppliedBy
User "1" <-- "0..*" Inspection : inspectedBy
User "1" <-- "0..*" Issue : reportedBy
User "1" <-- "0..*" ActivityLog : performedBy

Task ..> AuditLogger : <<use>>
DesignReview ..> AuditLogger : <<use>>
Issue ..> AuditLogger : <<use>>

@enduml
